# modelldcatnotordf

./: .flake8  .gitignore  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  coverage.yml  release.yml  test-pypi.yml  tests.yml
docs/: conf.py
src/modelldcatnotordf/: InformationModelDatacatalog.py  __init__.py  agent.py  conceptscheme.py  document.py  informationmodel.py  licensedocument.py  modelelement.py  modelldcatno.py  modelproperty.py  property.py  skolemizer.py
tests/: __init__.py  test_abstraction.py  test_agent.py  test_association.py  test_attribute.py  test_choice.py  test_code_element.py  test_code_list.py  test_collection.py  test_composition.py  test_concept.py  test_conceptscheme.py  test_contraint_rule.py  test_datatype.py  test_document.py  test_informationmodel.py  test_informationmodel_datacatalog.py  test_licensedocument.py  test_modelelement.py  test_module.py  test_note.py  test_objecttype.py  test_or.py  test_property.py  test_realization.py  test_role.py  test_root_object_type.py  test_simpletype.py  test_skolemizer.py  test_specialization.py  test_standard.py  test_xor.py  testintegration.py  testutils.py
