[tool.poetry]
name = "modelldcatnotordf"
version = "1.1.1"
description= "A library for mapping a modelldcatno model to rdf"
authors = ["Stig B. Dørmænen <stigbd@gmail.com>", "Frederik Rønnevig <frederik.code@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Informasjonsforvaltning/modelldcatnotordf"
repository = "https://github.com/Informasjonsforvaltning/modelldcatnotordf"
documentation = "https://modelldcatnotordf.readthedocs.io"
classifiers=[
      "Programming Language :: Python :: 3",
      "License :: OSI Approved :: Apache Software License",
      "Operating System :: OS Independent",
      ]
[tool.poetry.dependencies]
python = ">=3.8,<3.11"
rdflib = "^6.0.1"
importlib_metadata = {version = "^1.5.0", python = "<3.9"}
concepttordf = "^2.0.1"
datacatalogtordf = "^2.1.1"
validators = "^0.20.0"
pytest-mock = "^3.5.1"
skolemizer = "^1.1.0"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4.1"
pytest-cov = "^3.0.0"
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.4.25"
flake8-import-order = "^0.18.1"
safety = "^1.8.7"
mypy = "^0.961"
pytype = {version = "^2020.2.20", python = "3.7"}
flake8-annotations = "^2.9.0"
flake8-docstrings = "^1.5.0"
darglint = "^1.2.0"
Pygments = "^2.6.1"
xdoctest = "^1.0.0"
sphinx-autodoc-typehints = "1.11.1"
codecov = "^2.0.16"
pep8-naming = "^0.13.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = false
source = ["modelldcatnotordf"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
